# bevy-snake

./: Cargo.toml  LICENSE  README.md
src/: main.rs
